# LowCost3DReconstruction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  my_pipeline.sh
0InstallTools/: pcl_install.sh  tools_install.sh
1Capture/depth_capture/: depth_capture.cpp
1Capture/robesa_control/rotary_table/: rotary_table.ino
1Capture/super_resolution/: super_resolution.cpp
2Alignment/pair_align/: main.cpp  pair_align.cpp  pair_align.ui
2Alignment/rotate_align/: CMakeLists.txt
2Alignment/rotate_align_viewer/: CMakeLists.txt  main.cpp
3Clean/cloud_downsampling/: cloud_downsampling.cpp
3Clean/crop_cloud/: CMakeLists.txt  crop_cloud.cpp  crop_cloud.h  main.cpp
3Clean/outlier_removal/: outlier_removal.cpp
4Reconstruction/normal_estimation/: normal_estimation.cpp
4Reconstruction/poisson_reconstruction/: poisson_reconstruction.cpp
alignment/accumulate_clouds/: CMakeLists.txt  accumulate_clouds.cpp
alignment/centroid_align/: CMakeLists.txt
alignment/fine_registration/: CMakeLists.txt  fine_registration.cpp
alignment/pair_align/: CMakeLists.txt  pair_align.cpp  pair_align.h  pair_align.ui
alignment/point_cloud_registration/: CMakeLists.txt  point_cloud_registration.cpp
alignment/rotate_align/: CMakeLists.txt  rotate_align.cpp
alignment/rotate_align_viewer/: CMakeLists.txt  rotate_align.cpp  rotate_align.h
bundle_merge/: CMakeLists.txt  bundle_merge.cpp
capture/depth_capture/: CMakeLists.txt  depth_capture.cpp
capture/depth_capture_kv2/: CMakeLists.txt  depth_capture_kv2.cpp  kinect2.h
capture/super_resolution/: CMakeLists.txt  super_resolution.cpp
capture/super_resolution_kv2/: CMakeLists.txt  super_resolution_kv2.cpp
clean/cloud_downsampling/: cloud_downsampling.cpp
clean/crop_cloud/: crop_cloud.cpp  crop_cloud.h  crop_cloud.ui
clean/outlier_removal/: CMakeLists.txt  outlier_removal.cpp
clean/scale/: CMakeLists.txt  scale.cpp
clean/transform/: CMakeLists.txt  transform.cpp
install/: TEASER-plusplus_install.sh  colmap_install.sh  cuda_install.sh  libfreenect2_install.sh  openmvs_install.sh  pcl_install.sh  run_all_install.sh  super4pcs_install.sh  tools_install.sh
install_scripts/: colmap_install.sh
install_tools/: pcl_install.sh  tools_install.sh
meshlab/: MeshLab2020.12-linux.AppImage  MeshLabServer2020.12-linux.AppImage  mesh_reconstruction.mlx  mesh_reconstruction_2.mlx  normal_estimation.mlx
pcl_tools/: CMakeLists.txt  accumulate_clouds.cpp  centroid_align.cpp  cloud_downsampling.cpp  cluster_extraction.cpp  crop_cloud.cpp  fine_registration.cpp  normal_estimation.cpp  outlier_removal.cpp  planar_segmentation.cpp  scale.cpp  transform.cpp
reconstruction/normal_estimation/: CMakeLists.txt  normal_estimation.cpp
reconstruction/poisson_reconstruction/: CMakeLists.txt  poisson_reconstruction.cpp
rotate_align/: CMakeLists.txt  main.cpp  rotate_align.cpp  rotate_align.h  rotate_align.ui
scripts/: alignment.sh  bottom_view.sh  capture.sh  capture_alignment.sh  integration.sh  mesh_reconstruction.mlx  meshlab_script_normal.mlx  normal_estimation.mlx  normal_estimation_no_flip.mlx  normal_normalize.mlx  sfm.sh
sfm_mvs/: colmap_script.sh  colmap_script_gpu.sh
tools/cloud_downsampling/: CMakeLists.txt
tools/crop_cloud/: CMakeLists.txt  crop_cloud.cpp
tools/normal_estimation/: CMakeLists.txt  normal_estimation.cpp
tools/outlier_removal/: CMakeLists.txt
tools/scale/: CMakeLists.txt
tools/transform/: CMakeLists.txt
